<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tipTotal01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipTotal01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel01"
        app:layout_constraintTop_toBottomOf="@+id/displayHeadline"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tipTotal02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipTotal02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel02"
        app:layout_constraintTop_toBottomOf="@+id/tipTotal01"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/tipTotal03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipTotal03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel03"
        app:layout_constraintTop_toBottomOf="@+id/tipTotal02"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/tip01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tipLabel01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayHeadline"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/tip02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tipLabel02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip01"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tip03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tipLabel03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip02"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/displayHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayHeadline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/executeTipCalculation"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/executeTipCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollarInput"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/dollarInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tipLabel01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipLabel01"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tip01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayHeadline"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/tipLabel02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipLabel02"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tip02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel01"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/tipLabel03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipLabel03"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tip03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel02"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/total01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalLabel01"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel01"
        app:layout_constraintTop_toBottomOf="@+id/displayHeadline"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/total03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalLabel03"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel03"
        app:layout_constraintTop_toBottomOf="@+id/total02"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/total02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalLabel02"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tipLabel02"
        app:layout_constraintTop_toBottomOf="@+id/total01"
        app:layout_constraintVertical_bias="0.096" />


</androidx.constraintlayout.widget.ConstraintLayout>